# cpp-template

./: CMakeLists.txt
src/: CMakeLists.txt  example.cpp  example.hpp  main.cpp
